.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mspr-ci-user-api-service
  namespace: prod-mspr-ci
  labels:
    app: mspr-ci-user-api
spec:
  type: ClusterIP
  selector:
    app: mspr-ci-user-api
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
