.kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mspr-ci-user-api-ingress
  namespace: prod-mspr-ci
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  tls:
  - hosts:
    - user.api.k8s.louisperdereau.fr
    secretName: file-parser-app-tls
  rules:
  - host: user.api.k8s.louisperdereau.fr
    http:
      paths:
      - path: /
        backend:
          serviceName: file-parser-service
          servicePort: 80
